Fix scrollbar showing in tweet button on Firefox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -316,6 +316,7 @@ colgroup.hover {
     width: 85px;
     height: 20px;
     border: 0;
+    overflow: hidden;
   }
 }
 @media (min-width: $screen-sm-min) {
